# Service-backend-ai

./: .gitignore  INTEGRATION_PLAN.md  README.md  plan.md
ai-algorithm-service/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.mysql-only.yml  docker-compose.yml  management.sql  pyproject.toml  test_cologne3_payload.json  test_payload.json
ai-algorithm-service/api_docs/: run_ai_algorithm.md
ai-algorithm-service/db/init/: 00_create_schema.sql  01_ai_service_schema.sql
ai-algorithm-service/docs/: PIPELINE.md  README.md  api-reference.md  architecture.md  auto-sync.md  configuration.md  core-controller-api-contract.md  core-controller-input-data.md  core-controller-integration-api.md  demo-quickstart.md  deploy-docker-postman.md  deployment.md  elk-quickstart.md  end-to-end-test.md  integration-real-controller.md  real-network-registration.md  sim-to-real-mapping.md  sim-to-real-pipeline.md  testing.md  troubleshooting.md
ai-algorithm-service/docs/api-payload-examples/: inference-compact-request.json  register-real-network-snapshot.json
ai-algorithm-service/models/area_1/: network.json  policy.onnx  policy_meta.json
ai-algorithm-service/observability/: prometheus.yml  promtail.yml
ai-algorithm-service/observability/logstash/: pipeline.conf
ai-algorithm-service/postman/: README.md  RLOps E2E.postman_collection.json  RLOps Local.postman_environment.json
ai-algorithm-service/scripts/: register_demo_real_network_snapshot.py  register_real_network_snapshot.py
ai-algorithm-service/src/: main.py
ai-algorithm-service/src/api/: ai.py  internal_sync.py
ai-algorithm-service/src/bundles/: __init__.py  active.py  checksum.py  extractor.py  manifest.py  storage.py  topology_hash.py
ai-algorithm-service/src/core/: auth.py  config.py  error_codes.py  exception.py  logger.py  telemetry.py
ai-algorithm-service/src/db/: __init__.py  base.py  migrations.py  models.py  repositories.py
ai-algorithm-service/src/observability/: __init__.py  drift.py  drift_registry.py  metrics.py  mlflow_helper.py
ai-algorithm-service/src/ops/: __init__.py  api.py  auto_sync.py  composer.py  lifecycle.py  real_normalization.py  sim_bundle.py
ai-algorithm-service/src/preprocessing/: __init__.py  feature_builder.py  feature_normalizer.py  intersection_registry.py  observation_history.py  phase_normalizer.py  (+2 more)
ai-algorithm-service/tests/: conftest.py  test_ai_service_cycle_balance.py  test_apis.py  test_extractor_v2.py  test_guardrails.py  test_real_normalization_directions.py  test_runtime_v2.py  test_sim_bundle_pipeline.py  test_topology_hash.py
bundle-tooling/: README.md  pyproject.toml
bundle-tooling/bundle_tooling/: __init__.py  cli.py  deployment_map.py  deployment_validator.py  intersection_builder.py  packager.py
bundle-tooling/tests/: test_bundle_tooling.py
traffic_rl_features/: README.md  pyproject.toml
traffic_rl_features/tests/: test_package.py
traffic_rl_features/traffic_rl_features/: __init__.py  builder.py  formula.py  sim_helpers.py  spec.py  version.py
(+34 files in other folders)
