[project]
name = "traffic-rl-features"
version = "1.0.0"
description = "Shared feature preprocessing for sim training + runtime inference. Eliminate drift logic by having both sides import the same formula evaluator."
authors = [{ name = "ITS Toan" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traffic_rl_features"]
